Fix z-indexes for Safari, remove overflow-x on body to fix as well

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
